fixed help prompt text when selecting a target for spell/consumable not wrapping

--- a/src/app/components/combat-test/combat-test.component.scss
+++ b/src/app/components/combat-test/combat-test.component.scss
@@ -279,9 +279,18 @@ progress.enemyATB, progress.enemyATB::-webkit-progress-value{
     height: 100%;
 }
 
-#playerMainOptions, #playerMagicOptions, #playerInventoryOptions, #selectingTargetText{
+#playerMainOptions, #playerMagicOptions, #playerInventoryOptions{
     p{
         width: max-content;
+        padding-left: 5px;
+        &:first-of-type{
+            padding-top: 5px;
+        }
+    }
+}
+
+#selectingTargetText{
+    p{
         padding-left: 5px;
         &:first-of-type{
             padding-top: 5px;
